--- a/templates/news.html
+++ b/templates/news.html
@@ -1,4 +1,6 @@
     <head>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <title> NEWS </title>
         <style>
 
     .topics-river__wrapper___2CozB
@@ -15,9 +17,9 @@
         border: 0;
         box-sizing: border-box;
         font-size: 100%;
-        font-family: 'Poppins', sans-serif; poppins;
+        font-family: 'Poppins', sans-serif;
         font: inherit;
-        vertical-align: baseline;
+        
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -41,7 +43,7 @@
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         font-family: charter,georgia,serif;
         font-weight: 700;
         color: #31313b;
@@ -65,7 +67,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         margin-left: auto;
         margin-right: auto;
         position: relative;
@@ -92,7 +94,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         padding-bottom: 5rem;
         margin-right: 1.25rem;
         width: calc(25vw - 1.8749rem);
@@ -116,7 +118,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         display: block;
         border-bottom: 1px solid;
         border-color: #31313b;
@@ -140,7 +142,7 @@
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         font-family: museo-sans,helvetica,arial,sans-serif;
         font-weight: 700;
         letter-spacing: .075em;
@@ -168,7 +170,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         list-style: none;
 
 
@@ -192,7 +194,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         }
 
         
@@ -212,7 +214,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         display: block;
         height: auto;
         margin: 0;
@@ -238,7 +240,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         color: inherit;
         text-decoration: none;
         display: block;
@@ -256,7 +258,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         color: inherit;
         text-decoration: none;
         display: block;
@@ -277,7 +279,7 @@
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         font-family: charter,georgia,serif;
         font-weight: 700;
         color: #31313b;
@@ -300,7 +302,7 @@
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         color: #31313b;
         font-size: .8125rem;
         line-height: 1.15385;
@@ -321,7 +323,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;}
+        }
 
         .byline-link url fn n{
             --adminbar-height: 0rem;
@@ -337,7 +339,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         color: inherit;
         text-decoration: none;}
 
@@ -357,7 +359,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
     }
 
 
@@ -382,7 +384,7 @@
         font-size: 100%;
         font-family: 'Poppins', sans-serif;;
         font: inherit;
-        vertical-align: baseline;
+        
         display: none;
 
         } 
@@ -449,7 +451,7 @@
 <ul aria-labelledby="group-heading-928" class="list">
 <li class="term-river-grid__wrapper___fTw9V with-image" role="list-item"> <figure class="term-river-grid__figure___11iky">
 <a class="term-river-grid__thumbnail___k0oqa" href="https://www.sciencenews.org/article/only-a-tiny-fraction-of-our-dna-is-uniquely-human">
-<img alt="" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat.jpg 1030w" width="330"/> </a>
+<img alt="a crowd of people" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/07/071621_ts_dna_feat.jpg 1030w" width="330"/> </a>
 </figure>
 <div class="content">
 <!-- The post title -->
@@ -624,9 +626,20 @@
 </header>
 <ul aria-labelledby="group-heading-935" class="list">
 <li class="term-river-grid__wrapper___fTw9V with-image" role="list-item"> <figure class="term-river-grid__figure___11iky">
-<a class="term-river-grid__thumbnail___k0oqa" href="https://www.sciencenews.org/article/covid-colds-common-respiratory-diseases-kids-return-school">
-<img alt="microscope virus particles" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat-1030x580.jpg 1030w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat-1380x776.jpg 1380w, https://www.sciencenews.org/wp-content/uploads/2021/08/080321_jw_school-rsv-flu_feat.jpg 1440w" width="330"/> </a>
+<a class="term-river-grid__thumbnail___k0oqa" href="https://www.sciencenews.org/article/covid-coronavirus-aerosol-droplets-airborne-evolution">
+<img alt="a researcher sits crosslegged on a hospital bed with their face inside a silver cone that's connected to a transparent chamber full of scientific apparatus" class="attachment-thumbnail size-thumbnail" height="186" loading="lazy" sizes="(max-width: 330px) 100vw, 330px" src="https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat-330x186.jpg" srcset="https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat-330x186.jpg 330w, https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat-680x383.jpg 680w, https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat-800x450.jpg 800w, https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat-768x432.jpg 768w, https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat-1030x580.jpg 1030w, https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat-1380x776.jpg 1380w, https://www.sciencenews.org/wp-content/uploads/2021/08/081221_ts_covid-aerosol_feat.jpg 1440w" width="330"/> </a>
 </figure>
+<div class="content">
+<!-- The post title -->
+<h3 class="term-river-grid__title___2Gm-_">
+<a href="https://www.sciencenews.org/article/covid-coronavirus-aerosol-droplets-airborne-evolution">
+				New studies hint that the coronavirus may be evolving to become more airborne			</a>
+</h3>
+<div class="term-river-grid__meta___BARqt">
+				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/tina-hesman-saey">Tina Hesman Saey</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-08-17T15:48:36-04:00">August 17, 2021</time> </div>
+</div>
+</li>
+<li class="term-river-grid__wrapper___fTw9V no-image" role="list-item">
 <div class="content">
 <!-- The post title -->
 <h3 class="term-river-grid__title___2Gm-_">
@@ -646,17 +659,6 @@
 </h3>
 <div class="term-river-grid__meta___BARqt">
 				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/laura-sanders">Laura Sanders</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-08-11T11:00:00-04:00">August 11, 2021</time> </div>
-</div>
-</li>
-<li class="term-river-grid__wrapper___fTw9V no-image" role="list-item">
-<div class="content">
-<!-- The post title -->
-<h3 class="term-river-grid__title___2Gm-_">
-<a href="https://www.sciencenews.org/article/covid-school-kids-lost-education-learning-gap">
-				What kids lost when COVID-19 upended school			</a>
-</h3>
-<div class="term-river-grid__meta___BARqt">
-				By <span class="term-river-grid__byline___2xYH5 author vcard"><a class="byline-link url fn n" href="https://www.sciencenews.org/author/laura-sanders">Laura Sanders</a></span><time class="term-river-grid__date___1mM6f entry-date published" datetime="2021-08-10T06:00:00-04:00">August 10, 2021</time> </div>
 </div>
 </li> </ul>
 </div><div class="term-river-grid__group___2d4hS">
