--- a/templates/home.html
+++ b/templates/home.html
@@ -298,7 +298,7 @@ moreText.style.display = "inline";
   <img src="https://images.unsplash.com/photo-1587955415524-bb264e518428?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>About</b></h4>
-      <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+      <p>A Dynamic web application project that is based on flask framework that aims to reduce the challenges of writing a research paper.</p>
     </div>
   </div><hr>
   
