--- a/templates/csestatic.html
+++ b/templates/csestatic.html
@@ -3192,7 +3192,7 @@
           <td>Programming Languages, Compilers and Runtime Systems, and Parallel Software Systems.</td>
           
           
-          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Programming Languages, Compilers and Runtime Systems, and Parallel Software Systems." target="_blank">Profile</a>
+          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="">Profile</a>
           
           
           <a href="https://www.cse.iitk.ac.in/users/swarnendu/publications.html" target="_blank">Publication</a><p></p></div></td></tr>
@@ -3206,6 +3206,10 @@
           
           
           <td>Hardware Security</td>
+
+          <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="https://urbiism.wixsite.com/urbi1989" target="_blank">Profile</a>
+          
+
           
           
           <a href="https://scholar.google.co.in/citations?user=tb-hEXAAAAAJ&hl=en" target="_blank">Publication</a><p></p></div></td></tr>
