--- a/templates/home.html
+++ b/templates/home.html
@@ -18,6 +18,7 @@
     <a href="branches.html">Branches</a>
     <a href="news.html">News</a>
     <a href="template.html">Templates</a>
+    <a href="room.html"> Rooms </a>
   </div>
   
       
