--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Penguin Coders Chat</title>
+    <title>ManuScript Chat</title>
     <!--Link to CSS -->
     <link href="../static/bootstrap.min.css" rel="stylesheet" />
     <link href="../static/style.css" rel="stylesheet" />
