binary file changed

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -42,7 +42,7 @@
   <body class="text-center">
     
     <div class="chatwindow">
-      <h2 >Penguin Coders Chat</h2>
+      <h2>Chat</h2>
       <h2>Room : {{session['room']}}</h2><br>
       <textarea id="chat" cols="70" rows="10" placeholder="No messages yet. Start one..."></textarea><br /><br />
       <input type="text" id="text" size="60" placeholder="Enter your message here" />
